test/tasty/neg/src-2/TestCompiletimeQuoteType.check
TestCompiletimeQuoteType_fail.scala:4: error: could not find implicit value for evidence parameter of type scala.quoted.Type[Int]
  def test = CompiletimeQuoteType.f[Int]
                                   ^
1 error
